<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:hint="@string/number"
            android:inputType="number">
        </EditText>

        <EditText
            android:id="@+id/radix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:hint="@string/radix_number"
            android:inputType="number">
        </EditText>

        <EditText
            android:id="@+id/new_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:hint="@string/New_base"
            android:inputType="number">
        </EditText>

        <Button
            android:id="@+id/Enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter"
            android:layout_gravity="left"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/ans"
            android:layout_weight="0.01"
            android:textSize="@dimen/big"
            android:background="@color/light_blue"/>


    </LinearLayout>

</RelativeLayout>
